corrected gap and width

--- a/src/modulos/Defaulters/Defaulters.module.css
+++ b/src/modulos/Defaulters/Defaulters.module.css
@@ -51,7 +51,7 @@
     display: flex;
     font-size: var(--spL);
     margin-top: var(--spL);
-    width: 300px;
+    width: 100%;
     color: var(--cWhite);
   }
   & > div:nth-child(2) {
@@ -60,7 +60,7 @@
   }
   & > div > section:nth-child(1) {
     display: flex;
-    gap: 4px;
+    gap: 8px;
     width: 100%;
     flex: 1;
 
